<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_cat_news">

    <fragment
        android:id="@+id/navigation_cat_news"
        android:name="com.example.android_animation_poc.presentation.sample.cathome.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cat_list"
        android:name="com.example.android_animation_poc.presentation.sample.catlist.ListFragment"
        android:label="@string/list"
        tools:layout="@layout/fragment_cat_list" />

    <fragment
        android:id="@+id/navigation_cat_profile"
        android:name="com.example.android_animation_poc.presentation.sample.catprofile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>