<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        tools:context=".presentation.sample.cathome.HomeFragment">

        <TextView
            android:id="@+id/homeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/about_cats"
            android:textColor="@color/black"
            android:textSize="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/homeSubTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sub_title_home"
            android:textColor="@android:color/darker_gray"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@+id/cardSearch"
            app:layout_constraintEnd_toEndOf="@+id/homeTitle"
            app:layout_constraintStart_toStartOf="@+id/homeTitle"
            app:layout_constraintTop_toBottomOf="@+id/homeTitle" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:elevation="6dp"
            app:layout_constraintBottom_toBottomOf="@id/homeSubTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeSubTitle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:hint="@string/about_cats"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homeGrid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardSearch"
            tools:listitem="@layout/item_principal" />

        <TextView
            android:id="@+id/homeTreadTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/tread_title"
            android:textColor="@color/black"
            android:textSize="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeGrid" />

        <TextView
            android:id="@+id/homeSubTreadTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sub_title_home"
            android:textColor="@android:color/darker_gray"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@+id/homeTreadTitle"
            app:layout_constraintStart_toStartOf="@+id/homeTreadTitle"
            app:layout_constraintTop_toBottomOf="@+id/homeTreadTitle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listTread"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeSubTreadTitle"
            tools:listitem="@layout/item_tread" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
